// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> Closable is rendering well 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  margin-left: 4px;
  padding: 0;
  height: 18px;
}

.c3 {
  font-size: 18px !important;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        bold={false}
        className="material-icons MuiIcon-root-1 c3"
        closable={true}
        size="medium"
        style={
          Object {
            "color": "",
          }
        }
        text="Tag text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> Closable is rendering well 2`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  border: 1px solid;
  background: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  margin-left: 4px;
  padding: 0;
  height: 18px;
}

.c3 {
  font-size: 18px !important;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        bold={false}
        className="material-icons MuiIcon-root-1 c3"
        closable={true}
        size="medium"
        style={
          Object {
            "color": "",
          }
        }
        text="Tag text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> Closable is rendering well 3`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #FFFFFF;
  background-color: #999999;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  margin-left: 4px;
  padding: 0;
  height: 18px;
}

.c3 {
  font-size: 18px !important;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        bold={false}
        className="material-icons MuiIcon-root-1 c3"
        closable={true}
        size="medium"
        style={
          Object {
            "color": "#FFFFFF",
          }
        }
        text="Tag text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> Closable is rendering well 4`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #1355d0;
  background-color: #e5edfc;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  margin-left: 4px;
  padding: 0;
  height: 18px;
}

.c3 {
  font-size: 18px !important;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        bold={false}
        className="material-icons MuiIcon-root-1 c3"
        closable={true}
        size="medium"
        style={
          Object {
            "color": "#1355d0",
          }
        }
        text="Tag text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> Closable is rendering well 5`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #3c6510;
  background-color: #edfadf;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  margin-left: 4px;
  padding: 0;
  height: 18px;
}

.c3 {
  font-size: 18px !important;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        bold={false}
        className="material-icons MuiIcon-root-1 c3"
        closable={true}
        size="medium"
        style={
          Object {
            "color": "#3c6510",
          }
        }
        text="Tag text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> Closable is rendering well 6`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #a36300;
  background-color: #ffefd6;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  margin-left: 4px;
  padding: 0;
  height: 18px;
}

.c3 {
  font-size: 18px !important;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        bold={false}
        className="material-icons MuiIcon-root-1 c3"
        closable={true}
        size="medium"
        style={
          Object {
            "color": "#a36300",
          }
        }
        text="Tag text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> Closable is rendering well 7`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #ac001a;
  background-color: #ffe5e9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  margin-left: 4px;
  padding: 0;
  height: 18px;
}

.c3 {
  font-size: 18px !important;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        bold={false}
        className="material-icons MuiIcon-root-1 c3"
        closable={true}
        size="medium"
        style={
          Object {
            "color": "#ac001a",
          }
        }
        text="Tag text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> Closable is rendering well 8`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #1355d0;
  background-color: #f2f2f2;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  margin-left: 4px;
  padding: 0;
  height: 18px;
}

.c3 {
  font-size: 18px !important;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        bold={false}
        className="material-icons MuiIcon-root-1 c3"
        closable={true}
        size="medium"
        style={
          Object {
            "color": "#1355d0",
          }
        }
        text="Tag text"
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> Sizes large 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  font-size: 18px;
}

<div
  className="c0"
  size="large"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes medium 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes small 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  font-size: 12px;
  padding-top: 3px;
  padding-bottom: 3px;
}

<div
  className="c0"
  size="small"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins blue 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #1355d0;
  background-color: #e5edfc;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins blue-text 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #1355d0;
  background-color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins default 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins error 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #ac001a;
  background-color: #ffe5e9;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins inverted 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #FFFFFF;
  background-color: #999999;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins stroked 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  border: 1px solid;
  background: none;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins success 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #3c6510;
  background-color: #edfadf;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins warning 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  color: #a36300;
  background-color: #ffefd6;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> with bold prop 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  font-weight: bold;
  background-color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> with only text prop / children 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    example
  </div>
</div>
`;

exports[`<Tag /> with only text prop / children 2`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    example
  </div>
</div>
`;

exports[`<Tag /> without props 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  line-height: 1.5;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;
